<resources>
    <string name="app_name" translatable="false">Tetris</string>
    <string name="credits">Created by Mateusz Siedlecki.</string>
    <string name="newGameTxt">Play</string>
    <string name="controlsTxt">Controls</string>
    <string name="exitTxt">Exit</string>
    <string name="next_block">Next block</string>
    <string name="score">Your score:</string>
    <string name="gameOver">Game over!</string>
    <string name="toastOnExit">Press again to exit…</string>
    <string name="soClose">It was so close!</string>
    <string name="onlyXPointsPrefix">Only</string>
    <string name="onlyXPointsPostfix">points to a new high score!</string>
    <string name="stats">Stats</string>
    <string name="replay">Try again</string>
    <string name="menu">main menu</string>
    <string name="lastScores">Your scores</string>
    <string name="multiplier">Multiplier:</string>
    <string name="newHighScore">New record!</string>
    <string name="youDidIt">You did it!</string>
    <string name="clearedLines">Lines cleared:</string>
    <string name="settings">Settings</string>
    <string name="appbar_scrolling_view_behavior">TEST</string>
    <string name="website" translatable="false">https://mateuszsiedlecki.com/</string>
    <string name="blocks_total">Total blocks:</string>
</resources>
